# Ymir

./: .gitignore  CMakeLists.txt  README.md  Ymir.sln
Ymir/: Ymir.sln  Ymir.vcxproj  Ymir.vcxproj.filters
Ymir/Ymir/: Ymir.vcxproj
Ymir/Ymir/x64/Debug/: vc141.idb
Ymir/Ymir/x64/Debug/Ymir.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ymir.lastbuildstate  Ymir.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Ymir/include/: Attribute.h  Camera.h  Controller.h  IndexBuffer.h  Layout.h  Loader.h  Program.h  RegisterAttrib.h  Shader.h  Utility.h  VertexArrayBuffer.h  VertexBuffer.h
Ymir/include/auto/: GLSLVariableTypes.txt  GLSLVaribaleTypeGenerator.py
Ymir/shaders/: fragment.glsl  vertex.glsl
Ymir/src/: Camera.cpp  Controller.cpp  Program.cpp  RegisterAttrib.cpp  Shader.cpp  Utility.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp  main.cpp
Ymir/x64/Debug/: Ymir.exp  Ymir.ilk  Ymir.lib
include/: Layout.h  Shader.h  VertexArrayBuffer.h
shaders/: fragment.glsl  vertex.glsl
src/: IndexBuffer.cpp  Shader.cpp  VertexArrayBuffer.cpp  main.cpp
